tests/functional/lang/eval-fail-filterSource-3.err.exp
error:
       … while calling the 'filterSource' builtin
         at /pwd/lang/eval-fail-filterSource-3.nix:1:1:
            1| builtins.filterSource [ ] ./.
             | ^
            2|

       … while evaluating the first argument passed to builtins.filterSource

       error: expected a function but found a list: [ ]
